--- a/studs/changepass.html
+++ b/studs/changepass.html
@@ -142,7 +142,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <li class="header">Lists</li>
           
 			 <li class="treeview">
-              <a href="home.html"><i class="fa fa-link"></i> <span>My Stats</span> <i class="fa fa-angle-right pull-right"></i></a>
+              <a href="home.html"><i class="fa fa-link"></i> <span>My Stats</span> <i class="fa fa-angle-left pull-right"></i></a>
              
             </li>
 			 <li class="treeview">
@@ -155,7 +155,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </li>
 			
 			<li class="treeview">
-              <a href="#"><i class="fa fa-link"></i> <span>Accounts</span> <i class="fa fa-angle-left pull-right"></i></a>
+              <a href="#"><i class="fa fa-link"></i> <span>Accounts</span> <i class="fa fa-angle-right pull-left"></i></a>
               <ul class="treeview-menu">
                 <li><a href="changepass.html">Change Password</a></li>
                 <li><a href="#" id="btnLogout" class="logout">Log Out</a></li>
