--- a/studs/home.html
+++ b/studs/home.html
@@ -142,7 +142,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <li class="header">Lists</li>
           
 			 <li class="treeview">
-              <a href="home.html"><i class="fa fa-link"></i> <span>My Stats</span> <i class="fa fa-angle-right pull-right"></i></a>
+              <a href="home.html"><i class="fa fa-link"></i> <span>My Stats</span> <i class="fa fa-angle-right pull-left"></i></a>
              
             </li>
 			 <li class="treeview">
